<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".Editinfos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout222"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_info_img_edit"
                    android:src="@drawable/avatar"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativeLayout222"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="Adresse email"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:paddingLeft="@dimen/edit_padding"

                    android:background="@drawable/inputsubscribe"
                    android:id="@+id/edit_info_email_subscribe"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColorHint="#CDCDCD" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:layout_height="45dp"
                    android:background="@drawable/inputsubscribe"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Civilité"
                        android:id="@+id/textView9"
                        android:textColor="#CDCDCD"
                        android:textSize="16dp" />

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" MR"
                            android:id="@+id/subscribe_rb_mr"
                            android:checked="true"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:button="@drawable/bgradiobtn"
                            android:textColor="#CDCDCD" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" MME"
                            android:id="@+id/subscribe_rb_mme"
                            android:checked="false"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:button="@drawable/bgradiobtn"
                            android:textColor="#CDCDCD" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" MLLE"
                            android:id="@+id/subscribe_rb_mlle"
                            android:checked="false"
                            android:button="@drawable/bgradiobtn"
                            android:textColor="#CDCDCD"
                            android:textSize="12dp" />
                    </RadioGroup>
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:hint="@string/prenom"
                    android:ems="10"

                    android:background="@drawable/inputsubscribe"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:id="@+id/edit_info_nom"
                    android:layout_below="@+id/editText2"
                    android:layout_alignRight="@+id/edit_info_email_subscribe"
                    android:layout_alignEnd="@+id/edit_info_email_subscribe"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:hint="@string/nom"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:ems="10"
                    android:id="@+id/edit_info_prenom"
                    android:layout_below="@+id/edit_info_nom"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:hint="@string/hint_passwd"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:ems="10"
                    android:id="@+id/edit_info_passwd_edit"
                    android:layout_below="@+id/edit_info_nom"
                    android:layout_alignRight="@+id/edit_info_nom"
                    android:layout_alignEnd="@+id/edit_info_nom"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/edit_info_confirm_passwd"
                    android:hint="@string/confirm_passwd"
                    android:layout_below="@+id/edit_info_passwd_edit"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPostalAddress"
                    android:hint="@string/hint_adresse_postale"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:id="@+id/edit_info_edit_adresse"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPostalAddress"
                    android:hint="@string/hint_adresse_postale_cp"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:id="@+id/edit_info_edit_adresse2"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="phone"
                    android:ems="10"
                    android:hint="@string/hint_phone"
                    android:id="@+id/edit_info_phone"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="date"
                    android:ems="10"
                    android:hint="@string/hint_date_naiss"
                    android:layout_marginBottom="@dimen/edit_padding"
                    android:paddingLeft="@dimen/edit_padding"
                    android:id="@+id/edit_info_dtn"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/inputsubscribe"
                    android:textColorHint="#CDCDCD" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validate"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/btnrose"
                    android:id="@+id/btn_subscribe_validate" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
